--- a/index.html
+++ b/index.html
@@ -1,70 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
+	<link href="styles.css" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<style>
+		.attribution {
+			font-size: 11px;
+			text-align: center;
+		}
+
+		.attribution a {
+			color: hsl(228, 45%, 44%);
+		}
+	</style>
+
 </head>
+
 <body>
+	<header>
+		<div class="top-bar">
+			<img src="images/logo.svg">
+			<button>Try It Free</button>
+		</div>
 
-  Try It Free
+		<div class="header-content-container">
+			<h1>Build The Community Your Fans Will Love</h1>
 
-  Build The Community Your Fans Will Love
+			<p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+			<button class="button-pink">Get Started For Free</button>
+		</div>
+		<div class="img-container">
+			<img src="images/illustration-mockups.svg">
+		</div>
+	</header>
 
-  Get Started For Free
+	<main>
+		<div class="card">
+			<div class="img-container"><img src="images/illustration-grow-together.svg"></div>
+			<div class="text-container">
+				<h3>Grow Together</h3>
 
-  Grow Together
+				<p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+			</div>
+		</div>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+		<div class="card">
+			<div class="img-container"><img src="images/illustration-flowing-conversation.svg"></div>
+			<div class="text-container">
+				<h3>Flowing Conversations</h3>
 
-  Flowing Conversations
+				<p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+			</div>
+		</div>
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
+		<div class="card">
+			<div class="img-container"><img src="images/illustration-your-users.svg"></div>
+			<div class="text-container">
+				<h3>Your Users</h3>
 
-  Your Users
+				<p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+			</div>
+		</div>
 
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
+	</main>
 
-  Ready To Build Your Community?
+	Ready To Build Your Community?
 
-  Get Started For Free
+	Get Started For Free
+	<footer>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+		incididunt ut labore et dolore magna aliqua
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
+		+1-543-123-4567
+		example@huddle.com
 
-  +1-543-123-4567
-  example@huddle.com
+		About Us
+		What We Do
+		FAQ
 
-  About Us
-  What We Do
-  FAQ
+		Career
+		Blog
+		Contact Us
 
-  Career
-  Blog
-  Contact Us
+		&copy; Copyright 2018 Huddle. All rights reserved.
 
-  &copy; Copyright 2018 Huddle. All rights reserved.
 
-  <footer>
+		<!--
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Angus Macrae</a>.
     </p>
-  </footer>
+-->
+	</footer>
 </body>
+
 </html>
