--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
 		</div>
 
 		<div class="header-content-container">
-			<h1>Build The Community Your Fans Will Love</h1>
+			<div class="header-text">
+				<h1>Build The Community Your Fans Will Love</h1>
 
-			<p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+				<p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
 
-			<button class="button-pink">Get Started For Free</button>
-		</div>
-		<div class="img-container">
-			<img src="images/illustration-mockups.svg">
+				<button class="button-pink">Get Started For Free</button>
+			</div>
+			<div class="img-container">
+				<img src="images/illustration-mockups.svg">
+			</div>
 		</div>
 	</header>
 
 	<main>
+
 		<div class="card">
 			<div class="img-container"><img src="images/illustration-grow-together.svg"></div>
 			<div class="text-container">
