main body and footer styling

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
 	<header>
 		<div class="top-bar">
-			<img src="images/logo.svg">
-			<button>Try It Free</button>
+			<div><img src="images/logo.svg"></div>
+			<button class="button">Try It Free</button>
 		</div>
 
 		<div class="header-content-container">
@@ -37,7 +37,7 @@
 
 				<p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
 
-				<button class="button-pink">Get Started For Free</button>
+				<button class="button button-pink">Get Started For Free</button>
 			</div>
 			<div class="img-container">
 				<img src="images/illustration-mockups.svg">
@@ -76,26 +76,37 @@
 
 	</main>
 
-	Ready To Build Your Community?
 
-	Get Started For Free
 	<footer>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-		incididunt ut labore et dolore magna aliqua
+		<div class="card floating">
+			<p>Ready To Build Your Community?</p>
+			<button class="button button-pink">Get Started For Free</button>
+		</div>
+		<div class="footer-flex">
+		<ul>
+			<li>
+				<div>
+					<img src="images/logo.svg">
+				</div>
+			</li>
+			<li><img src="images/icon-location.svg"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p></li>
+			<li><img src="images/icon-phone.svg"><p>+1-543-123-4567</p></li>
+			<li><img src="images/icon-email.svg"><p>example@huddle.com</p></li>
+		</ul>
+		<ul class="footer-nav">
+			<li>About Us</li>
+			<li>What We Do</li>
+			<li>FAQ</li>
+			<li>Career</li>
+			<li>Blog</li>
+			<li>Contact Us</li>
+		</ul>
 
-		+1-543-123-4567
-		example@huddle.com
-
-		About Us
-		What We Do
-		FAQ
-
-		Career
-		Blog
-		Contact Us
-
-		&copy; Copyright 2018 Huddle. All rights reserved.
-
+		<div>
+			<div>(social icons)</div>
+			<p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+		</div>
+		</div>
 
 		<!--
     <p class="attribution">
