footer navigation spacing and margin tweaks

--- a/index.html
+++ b/index.html
@@ -78,34 +78,48 @@
 
 
 	<footer>
+
 		<div class="card floating">
 			<p>Ready To Build Your Community?</p>
 			<button class="button button-pink">Get Started For Free</button>
 		</div>
-		<div class="footer-flex">
-		<ul>
-			<li>
-				<div>
-					<img src="images/logo.svg">
-				</div>
-			</li>
-			<li><img src="images/icon-location.svg"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p></li>
-			<li><img src="images/icon-phone.svg"><p>+1-543-123-4567</p></li>
-			<li><img src="images/icon-email.svg"><p>example@huddle.com</p></li>
-		</ul>
-		<ul class="footer-nav">
-			<li>About Us</li>
-			<li>What We Do</li>
-			<li>FAQ</li>
-			<li>Career</li>
-			<li>Blog</li>
-			<li>Contact Us</li>
-		</ul>
 
-		<div>
-			<div>(social icons)</div>
-			<p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
-		</div>
+		<div class="footer-flex">
+			<div class="footer-contact-container">
+				<ul class="footer-contact">
+					<li>
+						<div>
+							<img src="images/logo.svg">
+						</div>
+					</li>
+					<li><img src="images/icon-location.svg">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+					</li>
+					<li><img src="images/icon-phone.svg">
+						<p>+1-543-123-4567</p>
+					</li>
+					<li><img src="images/icon-email.svg">
+						<p>example@huddle.com</p>
+					</li>
+				</ul>
+			</div>
+
+			<div class="footer-nav-container">
+				<ul class="footer-nav">
+					<li>About Us</li>
+					<li>What We Do</li>
+					<li>FAQ</li>
+					<li>Career</li>
+					<li>Blog</li>
+					<li>Contact Us</li>
+				</ul>
+			</div>
+
+			<div class="footer-social-copyright">
+				<div>(social icons)</div>
+				<p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+			</div>
+
 		</div>
 
 		<!--
