styling - floating card

--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
 
 	<footer>
 
-		<div class="card floating">
-			<p>Ready To Build Your Community?</p>
-			<button class="button button-pink">Get Started For Free</button>
+		<div class="floating-wrapper">
+			<div class="card floating">
+				<p>Ready To Build Your Community?</p>
+				<button class="button button-pink">Get Started For Free</button>
+			</div>
 		</div>
 		<div>
 			<img src="images/logo.svg">
