Added desktop view styling, footer floating card improvements

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<main>
 
-		<div class="card">
+		<div class="card content-card">
 			<div class="img-container"><img src="images/illustration-grow-together.svg"></div>
 			<div class="text-container">
 				<h3>Grow Together</h3>
@@ -56,7 +56,7 @@
 			</div>
 		</div>
 
-		<div class="card">
+		<div class="card content-card">
 			<div class="img-container"><img src="images/illustration-flowing-conversation.svg"></div>
 			<div class="text-container">
 				<h3>Flowing Conversations</h3>
@@ -65,7 +65,7 @@
 			</div>
 		</div>
 
-		<div class="card">
+		<div class="card content-card">
 			<div class="img-container"><img src="images/illustration-your-users.svg"></div>
 			<div class="text-container">
 				<h3>Your Users</h3>
@@ -73,18 +73,16 @@
 				<p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
 			</div>
 		</div>
-
-	</main>
-
-
-	<footer>
-
 		<div class="floating-wrapper">
 			<div class="card floating">
-				<p>Ready To Build Your Community?</p>
+				<h3 id="ready-build">Ready To Build Your Community?</h3>
 				<button class="button button-pink">Get Started For Free</button>
 			</div>
 		</div>
+	</main>
+
+	<footer>
+
 		<div>
 			<img src="images/logo.svg">
 		</div>
