Styling - footer improvements, social icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link href="styles.css" rel="stylesheet">
 
 	<style>
@@ -113,7 +114,11 @@
 			</div>
 
 			<div class="footer-social-copyright">
-				<div>(social icons)</div>
+				<div class="footer-social-icons">
+					<i class="fab fa-facebook-f"></i>
+					<i class="fab fa-twitter"></i>
+					<i class="fab fa-instagram"></i>
+				</div>
 				<p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
 			</div>
 
